--- a/kv/practica1.kv
+++ b/kv/practica1.kv
@@ -179,6 +179,14 @@
                 color: 1,1,1,1
                 on_press: root.graficar_resultados()
             Button:
+                text: "Animación"
+                size_hint: None, None
+                size: dp(200), dp(60)
+                font_size: '18sp'
+                background_color: 0.2, 0.6, 0.8, 1
+                color: 1,1,1,1
+                on_press: root.mostrar_animacion()
+            Button:
                 text: "Limpiar"
                 size_hint: None, None
                 size: dp(200), dp(60)
