--- a/kv/practica4.kv
+++ b/kv/practica4.kv
@@ -140,14 +140,22 @@
                 background_color: 0.06, 0.67, 0.52, 1  # Verde institucional
                 color: 1,1,1,1
                 on_press: root.graficar_resultados()
-        Button:
-            text: "Limpiar"
-            size_hint: None, None
-            size: dp(200), dp(60)
-            font_size: '18sp'
-            background_color: 0.93, 0.49, 0.14, 1  # Naranja
-            color: 1,1,1,1
-            on_press: root.limpiar_datos()
+            Button:
+                text: "Animación"
+                size_hint: None, None
+                size: dp(200), dp(60)
+                font_size: '18sp'
+                background_color: 0.2, 0.6, 0.8, 1
+                color: 1,1,1,1
+                on_press: root.mostrar_animacion()
+            Button:
+                text: "Limpiar"
+                size_hint: None, None
+                size: dp(200), dp(60)
+                font_size: '18sp'
+                background_color: 0.93, 0.49, 0.14, 1  # Naranja
+                color: 1,1,1,1
+                on_press: root.limpiar_datos()
 
         # Botón volver
         Button:
