--- a/kv/practica3.kv
+++ b/kv/practica3.kv
@@ -165,41 +165,38 @@
         # Botones de acción
         BoxLayout:
             orientation: 'horizontal'
-            spacing: 18
             size_hint_y: None
-            height: 60
+            height: dp(60)
+            spacing: dp(10)
+            padding: dp(20), 0
+
             Button:
                 text: "Simular"
-                size_hint: None, None
-                size: dp(200), dp(60)
-                font_size: '18sp'
-                background_color: 0.18, 0.52, 0.87, 1  # Azul fuerte
-                color: 1,1,1,1
-                on_press: root.simular_intercambio()
+                size_hint_x: 1
+                font_size: '16sp'
+                background_color: 0.0, 0.2, 0.4, 1
+                on_release: root.simular_intercambio()
+
             Button:
                 text: "Graficar"
-                size_hint: None, None
-                size: dp(200), dp(60)
-                font_size: '18sp'
-                background_color: 0.06, 0.67, 0.52, 1  # Verde institucional
-                color: 1,1,1,1
-                on_press: root.graficar_resultados()
+                size_hint_x: 1
+                font_size: '16sp'
+                background_color: 0.0, 0.4, 0.3, 1
+                on_release: root.graficar_animacion()
+
             Button:
                 text: "Animación"
-                size_hint: None, None
-                size: dp(200), dp(60)
-                font_size: '18sp'
-                background_color: 0.2, 0.6, 0.8, 1
-                color: 1,1,1,1
-                on_press: root.mostrar_animacion()
+                size_hint_x: 1
+                font_size: '16sp'
+                background_color: 0.0, 0.3, 0.5, 1
+                on_release: root.mostrar_animacion()
+
             Button:
                 text: "Limpiar"
-                size_hint: None, None
-                size: dp(200), dp(60)
-                font_size: '18sp'
-                background_color: 0.93, 0.49, 0.14, 1  # Naranja
-                color: 1,1,1,1
-                on_press: root.limpiar_datos()
+                size_hint_x: 1
+                font_size: '16sp'
+                background_color: 0.4, 0.2, 0.0, 1
+                on_release: root.limpiar_datos()
 
         # Botón volver
         Button:
