--- a/kv/practica2.kv
+++ b/kv/practica2.kv
@@ -168,7 +168,7 @@
                 size_hint_x: 1
                 font_size: '16sp'
                 background_color: 0.0, 0.4, 0.3, 1
-                on_release: root.graficar_animacion()
+                on_release: root.graficar_resultados()
 
             Button:
                 text: "Animación"
