--- a/kv/practica2.kv
+++ b/kv/practica2.kv
@@ -1,8 +1,8 @@
 #:kivy 2.1.0
 # Layout práctica 2
 
-<Practica2Screen>:
-    name: "practica2"
+<Practica5Screen>:
+    name: "practica5"
     canvas.before:
         Color:
             rgba: (240/255, 240/255, 240/255, 1)
@@ -16,7 +16,7 @@
         spacing: min(self.height*0.04, 30)
 
         Label:
-            text: "Práctica 2 – Simulación del sistema de filtrado multicapa"
+            text: "Práctica 2 – Simulación de captación de agua lluvia"
             font_size: str(max(self.width, self.height) * 0.025) + 'sp'
             color: (34/255, 34/255, 34/255, 1)
             bold: True
@@ -34,29 +34,13 @@
                 size_hint_x: 0.5
 
                 Label:
-                    text: "Turbidez inicial (NTU)"
+                    text: "Intensidad de la lluvia (mm/h)"
                     color: (34/255, 34/255, 34/255, 1)
                     font_size: '16sp'
                     size_hint_y: None
                     height: 28
                 TextInput:
-                    id: input_turbidez
-                    hint_text: "Ej: 50"
-                    input_filter: 'float'
-                    background_color: (1,1,1,1)
-                    foreground_color: (34/255, 34/255, 34/255, 1)
-                    multiline: False
-                    size_hint_y: None
-                    height: 32
-
-                Label:
-                    text: "Volumen de agua (L)"
-                    color: (34/255, 34/255, 34/255, 1)
-                    font_size: '16sp'
-                    size_hint_y: None
-                    height: 28
-                TextInput:
-                    id: input_volumen
+                    id: input_intensidad
                     hint_text: "Ej: 20"
                     input_filter: 'float'
                     background_color: (1,1,1,1)
@@ -66,50 +50,36 @@
                     height: 32
 
                 Label:
-                    text: "Capas activas"
+                    text: "Área del techo (m²)"
                     color: (34/255, 34/255, 34/255, 1)
                     font_size: '16sp'
                     size_hint_y: None
-                    height: 24
-
-                BoxLayout:
-                    orientation: 'horizontal'
-                    spacing: 10
+                    height: 28
+                TextInput:
+                    id: input_area
+                    hint_text: "Ej: 50"
+                    input_filter: 'float'
+                    background_color: (1,1,1,1)
+                    foreground_color: (34/255, 34/255, 34/255, 1)
+                    multiline: False
                     size_hint_y: None
                     height: 32
 
-                    CheckBox:
-                        id: check_grava
-                        active: root.grava_activa
-                        on_active: root.grava_activa = self.active
-                    Label:
-                        text: "Grava"
-                        color: (34/255, 34/255, 34/255, 1)
-                        font_size: '15sp'
-                        size_hint_x: None
-                        width: 60
-
-                    CheckBox:
-                        id: check_arena
-                        active: root.arena_activa
-                        on_active: root.arena_activa = self.active
-                    Label:
-                        text: "Arena"
-                        color: (34/255, 34/255, 34/255, 1)
-                        font_size: '15sp'
-                        size_hint_x: None
-                        width: 60
-
-                    CheckBox:
-                        id: check_carbon
-                        active: root.carbon_activo
-                        on_active: root.carbon_activo = self.active
-                    Label:
-                        text: "Carbón activado"
-                        color: (34/255, 34/255, 34/255, 1)
-                        font_size: '15sp'
-                        size_hint_x: None
-                        width: 110
+                Label:
+                    text: "Tiempo de captación (min)"
+                    color: (34/255, 34/255, 34/255, 1)
+                    font_size: '16sp'
+                    size_hint_y: None
+                    height: 28
+                TextInput:
+                    id: input_tiempo
+                    hint_text: "Ej: 30"
+                    input_filter: 'float'
+                    background_color: (1,1,1,1)
+                    foreground_color: (34/255, 34/255, 34/255, 1)
+                    multiline: False
+                    size_hint_y: None
+                    height: 32
 
             # Resultados a la derecha (idéntico a práctica 1)
             BoxLayout:
@@ -132,16 +102,56 @@
                     bold: True
 
                 Label:
-                    text: "Turbidez final: [b]{}[/b]".format(root.turbidez_final)
+                    text: "Volumen captado: [b]{}[/b]".format(root.volumen_captado)
                     markup: True
                     color: (34/255, 34/255, 34/255, 1)
                     font_size: '16sp'
 
                 Label:
-                    text: "Eficiencia de remoción: [b]{}[/b]".format(root.eficiencia_remocion)
+                    text: "Nivel en el tanque: [b]{}[/b]".format(root.nivel_sensor)
                     markup: True
                     color: (34/255, 34/255, 34/255, 1)
                     font_size: '16sp'
+
+                Label:
+                    text: "Volumen estimado por sensor: [b]{}[/b]".format(root.volumen_estimado)
+                    markup: True
+                    color: (34/255, 34/255, 34/255, 1)
+                    font_size: '16sp'
+
+                Label:
+                    text: "Precisión del sensor: [b]{}[/b]".format(root.precision)
+                    markup: True
+                    color: (34/255, 34/255, 34/255, 1)
+                    font_size: '16sp'
+
+                Label:
+                    text: "Tiempo de captación: [b]{}[/b]".format(root.tiempo_captacion)
+                    markup: True
+                    color: (34/255, 34/255, 34/255, 1)
+                    font_size: '16sp'
+
+                # Visualización gráfica del tanque (barra de nivel)
+                BoxLayout:
+                    orientation: 'horizontal'
+                    size_hint_y: None
+                    height: 32
+                    spacing: 8
+                    Label:
+                        text: "Tanque"
+                        color: (46/255, 134/255, 222/255, 1)
+                        font_size: '14sp'
+                        size_hint_x: 0.2
+                    ProgressBar:
+                        max: 100
+                        value: float(root.nivel_sensor.split()[0]) if root.nivel_sensor else 0
+                        size_hint_x: 0.7
+                        height: 22
+                    Label:
+                        text: "100 cm"
+                        color: (46/255, 134/255, 222/255, 1)
+                        font_size: '14sp'
+                        size_hint_x: 0.2
 
                 Label:
                     text: root.mensaje_error
@@ -161,7 +171,7 @@
                 size_hint_x: 1
                 font_size: '16sp'
                 background_color: 0.0, 0.2, 0.4, 1
-                on_release: root.simular_filtrado()
+                on_release: root.simular_captacion()
 
             Button:
                 text: "Graficar"
