--- a/kv/main.kv
+++ b/kv/main.kv
@@ -38,30 +38,30 @@
                 on_release: app.root.current = 'practica1'
 
             Button:
-                text: "Práctica 2: Filtrado multicapa"
+                text: "Práctica 2: Captación de agua"
+                background_color: (46/255, 134/255, 222/255, 1)
+                color: (1, 1, 1, 1)
+                font_size: '20sp'
+                on_release: app.root.current = 'practica5'
+
+            Button:
+                text: "Práctica 3: Filtrado multicapa"
                 background_color: (46/255, 134/255, 222/255, 1)
                 color: (1, 1, 1, 1)
                 font_size: '20sp'
                 on_release: app.root.current = 'practica2'
 
             Button:
-                text: "Práctica 3: Intercambiador de calor"
-                background_color: (46/255, 134/255, 222/255, 1)
-                color: (1, 1, 1, 1)
-                font_size: '20sp'
-                on_release: app.root.current = 'practica3'
-
-            Button:
-                text: "Práctica 4: Caldera solar/eléctrica"
+                text: "Práctica 4: Caldera"
                 background_color: (46/255, 134/255, 222/255, 1)
                 color: (1, 1, 1, 1)
                 font_size: '20sp'
                 on_release: app.root.current = 'practica4'
 
             Button:
-                text: "Práctica 5: Captación de agua de lluvia"
+                text: "Práctica 5: Intercambiador de calor"
                 background_color: (46/255, 134/255, 222/255, 1)
                 color: (1, 1, 1, 1)
                 font_size: '20sp'
-                on_release: app.root.current = 'practica5'
+                on_release: app.root.current = 'practica3'
 
